MarcoKitTests/TestData/error/object11.marco
--before
{
    foo{ index 0 }
}

--after
9-20: Whitespace required in a key-value pair
